--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
 /* CSS Document */
 
 html {
-    background: url(www.jpg) no-repeat center center fixed;
+    background: url(new-world.jpeg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
